storage/innobase/lock/lock0lock.cc
@@ -414,9 +414,7 @@ lock_clust_rec_cons_read_sees(
 	transactions from different connections cannot simultaneously
 	operate on same temp-table and so read of temp-table is
 	always consistent read. */
-	if (srv_read_only_mode || dict_table_is_temporary(index->table)) {
-		ut_ad(!view->is_open()
-		      || dict_table_is_temporary(index->table));
+	if (index->table->is_temporary()) {
 		return(true);
 	}
 
